--- a/src/components/cart.scss
+++ b/src/components/cart.scss
@@ -1,8 +1,21 @@
 .cart {
   position: fixed;
-  left: 0;
-  right: 0;
+  left: 1rem;
+  right: 1rem;
   bottom: 0;
-  padding: 1rem;
-  background-color: red;
+  border-radius: 1rem 1rem 0 0;
+  background-color: white;
+  border: 1px solid silver;
+  border-bottom: none;
+  transform: translateY(calc(100% - 2rem));
+
+  &.open {
+    transform: translateY(0);
+  }
+
+  > div {
+    height: 100%;
+    padding: 1rem;
+    padding-top: 2rem;
+  }
 }
