--- a/src/components/tabs.scss
+++ b/src/components/tabs.scss
@@ -11,30 +11,40 @@
 .beers {
   flex-grow: 10;
   overflow: auto;
-  display: grid;
-  grid-gap: 0;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 0.5rem;
-  margin: 0;
 
-  li {
-    list-style: none;
+  ul {
+    display: grid;
+    grid-gap: 0;
+    grid-template-columns: repeat(3, 1fr);
     padding: 0.5rem;
+    margin: 0;
 
-    .image {
-      width: 100px;
-      height: 100px;
-      margin: 0 auto;
-      border: 1px solid silver;
-      border-radius: 1rem;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: auto 80px;
-    }
-
-    .name {
-      text-align: center;
+    li {
+      list-style: none;
       padding: 0.5rem;
+
+      .image {
+        width: 100px;
+        height: 100px;
+        margin: 0 auto;
+        border: 1px solid silver;
+        border-radius: 1rem;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: auto 80px;
+      }
+
+      .name {
+        text-align: center;
+        padding: 0.5rem;
+      }
     }
+  }
+
+  .more {
+    font-size: 1.2rem;
+    text-align: center;
+    padding: 1rem;
+    border-top: 1px solid silver;
   }
 }
